--- a/template/sermons.html
+++ b/template/sermons.html
@@ -91,7 +91,7 @@
 
   </div>
   
-  <a href="../index.html" class="download-btn breadCrumbs">Back To Home</a>
+  <a href="https://awpwmedia.org" class="download-btn breadCrumbs">Back To Home</a>
   
   <br>
   
